CS102_Projects/C16/compiling_error.txt
C:\Users\James\Documents\GitHub\school\CS102_Projects\C16\C16_P13.cpp: In function 'int main()':
C:\Users\James\Documents\GitHub\school\CS102_Projects\C16\C16_P13.cpp:113:42: error: invalid initialization of reference of type 'std::vector<annualWeather>&' from expression of type '__gnu_cxx::__alloc_traits<std::allocator<annualWeather> >::value_type {aka annualWeather}'
             setAnnualData((*report)[year]); //sets the annual level data
                                          ^
C:\Users\James\Documents\GitHub\school\CS102_Projects\C16\C16_P13.cpp:61:6: note: in passing argument 1 of 'void setAnnualData(std::vector<annualWeather>&)'
 void setAnnualData(vector<annualWeather> (&year_data)); //sets the annual averages/his/lows
      ^~~~~~~~~~~~~
C:\Users\James\Documents\GitHub\school\CS102_Projects\C16\C16_P13.cpp:151:39: error: could not convert 'report[i]' from 'std::vector<annualWeather>' to 'annualWeather'
             displayAnnualData(report[i]);
                               ~~~~~~~~^
C:\Users\James\Documents\GitHub\school\CS102_Projects\C16\C16_P13.cpp:170:49: error: 'class std::vector<annualWeather>' has no member named 'monthlyData'
             displayWeatherData(report[selected].monthlyData[i], i);
                                                 ^~~~~~~~~~~
